# Renova-Backend-Mono

./: .gitignore
integrations/mcp/cobol/cobol-parser-mcp/: .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
integrations/mcp/cobol/cobol-parser-mcp/schemas/: cam.asset.source_index.json  cam.cobol.copybook.json  cam.cobol.program.json
integrations/mcp/cobol/cobol-parser-mcp/src/: __init__.py  main.py
integrations/mcp/cobol/cobol-parser-mcp/src/parser/: __init__.py  normalizer.py  proleap_adapter.py
integrations/mcp/cobol/cobol-parser-mcp/src/utils/: __init__.py  discovery.py  encoding.py  hashing.py  indexer.py  logging.py  validator.py
integrations/mcp/git/git-mcp/: .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
integrations/mcp/git/git-mcp/src/git_mcp/: config.py  mcp.py  server.py
integrations/mcp/git/git-mcp/src/git_mcp/schemas/: cam.asset.repo_snapshot.1-0-0.json  tool.clone_repo.output.schema.json
integrations/mcp/git/git-mcp/src/git_mcp/tools/: clone_repo.py  ls_tree.py  (+3 more)
services/artifact-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/artifact-service/app/: config.py  logging_conf.py  main.py
services/artifact-service/app/dal/: artifact_dal.py  category_dal.py  kind_registry_dal.py
services/artifact-service/app/db/: mongodb.py
services/artifact-service/app/events/: rabbit.py  workspace_consumer.py
services/artifact-service/app/middleware/: correlation.py
services/artifact-service/app/models/: artifact.py  category.py  kind_registry.py
services/artifact-service/app/routers/: __init__.py  artifact_routes.py  category_routes.py  registry_routes.py
services/artifact-service/app/seeds/: bootstrap.py  seed_categories.py  seed_registry.py
services/artifact-service/app/services/: openapi_typing.py  registry_service.py
services/capability-registry/: .env.example  Dockerfile  pyproject.toml
services/capability-registry/app/: config.py  logging_conf.py  main.py
services/capability-registry/app/dal/: capability_dal.py  integrations_dal.py
services/capability-registry/app/db/: mongodb.py
services/capability-registry/app/events/: rabbit.py
services/capability-registry/app/models/: capability_pack.py  integrations.py
services/capability-registry/app/routers/: capability_routes.py  integrations_routes.py  resolve_routes.py
services/capability-registry/app/seeds/: capabilities_seed.py  integrations_seed.py
services/capability-registry/app/services/: artifact_registry_client.py  plan_resolver.py  schema_utils.py
services/learning-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/learning-service/app/: config.py  logging.py  main.py
services/learning-service/app/agents/: generic_kind_agent.py  registry.py  report_builder.py  spi.py
services/learning-service/app/clients/: analyzer_db2.py  artifact_service.py  capability_registry.py  capability_service.py  fetcher_github.py  parser_jcl.py  parser_proleap.py
services/learning-service/app/db/: learning_runs.py  mongo.py  runs.py
services/learning-service/app/diagrams/: generator.py
services/learning-service/app/executor/: executor.py  runtime.py  tool_runner.py
services/learning-service/app/graphs/: learning_graph.py
services/learning-service/app/graphs/nodes/: audit_node.py  diagram_node.py  diff_node.py  exec_llm_node.py  exec_mcp_node.py  finalize_node.py  gate_produced_node.py  ingest_node.py  load_pack_node.py  preflight_node.py  prepare_context_node.py  validate_node.py
services/learning-service/app/infra/: rabbit.py
services/learning-service/app/integrations/: __init__.py  invoker.py  transport_http.py  transport_stdio.py
services/learning-service/app/llms/: base.py  openai_provider.py  registry.py
services/learning-service/app/middleware/: correlation.py
services/learning-service/app/models/: events.py  learning.py  run.py  state.py
services/learning-service/app/nodes/: agent_synthesize_node.py  artifact_assembly_node.py  classify_after_persist_node.py  context_assembly_node.py  execute_node.py  ingest_node.py  persist_node.py  plan_node.py  post_synthesize_debug_node.py  publish_node.py  resolve_dependencies_node.py  tool_exec_node.py  validate_node.py
services/learning-service/app/prompts/: validate.txt
services/learning-service/app/routers/: health.py  packs.py  runs.py
(+56 files in other folders)
