[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renova-capability-registry"
version = "0.1.0"
description = "Renova Capability Registry service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "orjson>=3.10",
  "motor>=3.3",
  "pymongo>=4.6",
  "pika>=1.3",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "jsonschema>=4.21.1",
]

[tool.setuptools]
# Use automatic discovery so egg_info can run even before code is copied,
# as long as package_dir is declared.
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
