[project]
name = "learning-service"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.114.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "orjson>=3.10.0",
  "httpx>=0.27.0",
  "pymongo>=4.8.0",
  "structlog>=24.1.0",
  "pika>=1.3.2",
  "langgraph>=0.2.23",
  "openai>=1.40.0",
]
