[project]
name = "renova-learning-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "motor>=3.5",
  "orjson>=3.10",
  "aio-pika>=9.4",

  # Agent & reasoning
  "langgraph>=0.2.0",
  "jsonschema>=4.23",
  "tenacity>=9.0",

  # HTTP client for upstream services / MCP over HTTP (if needed later)
  "httpx>=0.27",

  # Utilities
  "python-dotenv>=1.0",
  "openai>=1.40",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
