# integrations/mcp/cobol/cobol-parser-mcp/pyproject.toml
[project]
name = "cobol-parser-mcp"
version = "0.0.1"
description = "STDIO MCP server that parses COBOL & copybooks and emits CAM-normalized artifacts."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Renova", email = "devnull@renova.local" }]

dependencies = [
  "orjson>=3.9,<4",
  "jsonschema>=4.22,<5",
  "chardet>=5,<6",
  "pydantic>=2.7,<3",
  "click>=8,<9",
  # optional runtime niceties (no-op if not used in minimal stub)
  "uvloop>=0.19,<1 ; platform_system != 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"
