[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-mcp"
version = "0.1.0"
description = "MCP stdio server exposing deterministic Git tools"
authors = [{ name = "Renova" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.22.0",
]

[project.scripts]
git-mcp = "git_mcp.server:main"
